# WOO_ops_bot

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  trading_volume_jobs.sh
announcement_bot/: info.py  main.py  test_main.py
announcement_bot/db/chat/: chat_info.csv
announcement_bot/lib/: permission.csv  utils.py
cex_services/: setup.py
cex_services/cex_services.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cex_services/cex_services/exchanges/: bybit.py
defi-monitor/: apy_monitor.py  lrt_liquidity_monitor.py
defi-monitor/lib/: utils.py
defi_liquidity_monitor/: main.py
defi_liquidity_monitor/lib/: utils.py
exchange_service/: binance.py  bybit.py  job_manager.py  kucoin.py  okx.py  setup.py  utils.py
exchange_service/exchange_service/: binance.py
exchange_service/exchange_service.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
exchange_service/exchange_service/exchanges/: base.py  binance.py  okx.py
exchange_service/exchange_service/parsers/: base.py  kucoin.py
exchange_service/exchanges/: kucoin.py
exchange_service/lib/: binance.py  bybit.py  okx.py  utils.py
exchange_service/lib/exchanges/: base.py  binance.py  bybit.py  okx.py
exchange_service/lib/parsers/: base.py  binance.py  bybit.py  okx.py
exchange_service/parsers/: binance.py  kucoin.py
exchange_service/pipeline/: binance.py  binance_job.py  bybit_job.py  exchange_job.py  job_manager.py  jobs.py  okx_job.py
listing_monitor/: jobs_manager.py  main.py  updater.py
listing_monitor/lib/: utils.py
pipeline/: binance_job.py  bybit_job.py  job_manager.py  okx_job.py
test_slack_bot/: main.py
trade_bot/: binance_main.py
trade_bot/binance_bot/: margin_bot.py
trading_volume_tracker_v2/: job_manager.py  main.py
trading_volume_tracker_v2/db/: listing_db.csv
trading_volume_tracker_v2/lib/: cases.py  utils.py
trading_volume_tracker_v2/pipeline/: jobs.py
value_monitor/: binance_monitor.py
