[tool.poetry]
authors = []
description = ""
name = "bybit"
packages = [{include = "bybit"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
core = {path = "../core"}
python = "^3.10"
python-dotenv = "^1.0.0"
term-structure-python-sdk = {path = "../term-structure-python-sdk"}
fastapi = "^0.103.1"
uvicorn = "^0.23.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
line-length = 120
include = "\\.pyi?$"
exclude = """
(
   /(
      \\.eggs         # exclude a few common directories in the
    | \\.git          # root of the project
    | \\.hg
    | \\.mypy_cache
    | \\.tox
    | \\.venv
    | _build
    | buck-out
    | build
    | dist
    )/
)
"""

[tool.isort]
# black compatibility
profile = "black"
# cuctom section
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_third_party = []
known_local_folder = []

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

